# signal-engine

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml
signal_engine/: analytics.py  cli.py  cluster.py  ingest.py  migrations.py  normalize.py  report.py
signal_engine/migrations/: 20260101_01_initial_schema.sql  20260205_01_add_metrics.sql
tests/: conftest.py  test_analytics.py  test_cli.py  test_cluster.py  test_export.py  test_ingest.py  test_migrations.py
